--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "jquery": "^3.6.0",
     "stimulus": "^3.0.1",
     "turbolinks": "^5.2.0",
+    "typeit": "^8.3.3",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12"
   },
